--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,14 @@ readme = "README.md"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["max-encoded-len"] }
-scale-info = { version = "2.10.0", default-features = false, features = [
+codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["max-encoded-len"] }
+scale-info = { version = "2.11.3", default-features = false, features = [
     "derive",
 ] }
-sp-runtime = { version = "31.0.1", default-features = false, git = "https://github.com/Allfeat/polkadot-sdk.git", branch = "allfeat-polkadot-v1.9.0", optional = true }
+sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2407", optional = true }
 
 [features]
-default = ["std"]
+default = ["std", "substrate"]
 std = [
     "codec/std",
     "scale-info/std",
